--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
 	<head>
+		<meta charset="utf-8">
 		<title>Testing Material Design</title>
 		<link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.min.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,6 +14,7 @@
 				<md-button ng-click="toggleNav();" class="md-icon-button">
 					<i class="material-icons">menu</i>
 				</md-button>
+				<h4>User Management System</h4>
 			</div>
 		</md-toolbar>
 		<section layout="row" flex>
@@ -25,12 +27,46 @@
 						</md-button>
 					</div>
 				</md-toolbar>
+				<md-content>
+					<md-list flex>
+						<md-list-item ng-repeat="user in users" ng-click="selectUser(user.id)">
+							<img ng-src="assets/{{user.avatar}}" class="md-avatar">
+							<div class="md-list-item-text"><p>{{user.name}}</p></div>
+						</md-list-item>
+					</md-list>
+				</md-content>
 			</md-sidenav>
-			<md-content class="md-padding" layout="column" flex>
+			<md-content style="background: #F1F1F1" class="md-padding" layout="column" flex>
 
-				some content
+				<div layout="row" ng-if="selected">
+					<div layout="column" flex="20">
+						<md-card layout-padding>
+							<img width="355" height="355" ng-src="assets/{{selected.avatar}}">
+						</md-card>
+					</div>
+					<div layout="column" flex="40">
+						<md-card layout-padding flex>
+							<div layout="row">
+								<div layout="column" flex="15">Name:</div>
+								<div layout="column" flex>{{selected.name}}</div>
+							</div>
+							<div layout="row">
+								<div layout="column" flex="15">Address:</div>
+								<div layout="column" flex>{{selected.address}}</div>
+							</div>
+							<div layout="row">
+								<div layout="column" flex="15">About:</div>
+								<div layout="column" flex>{{selected.about}}</div>
+							</div>
+						</md-card>
+					</div>
+				</div>
 
-				<md-fab-speed-dial class="md-fab-bottom-right" md-direction="up" md-open="false" ng-class="selectedMode">
+				<div layout="row" ng-if="!selected" layout-align="center center" flex>
+					<img src="assets/folder.svg" class="adduser" ng-click="createUserDilaog($event)">
+				</div>
+
+				<md-fab-speed-dial class="md-fab-top-right" md-direction="down" md-open="false" ng-class="selectedMode">
 					<md-fab-trigger>
 						<md-button aria-label="options" class="md-fab md-warn">
 							<md-icon md-font-set="material-icons">more_vert</md-icon>
@@ -41,7 +77,15 @@
 							<md-icon md-font-set="material-icons" aria-label="add">add</md-icon>
 							<md-tooltip md-direction="left">Add</md-tooltip>
 						</md-button>
-						<md-button aria-label="share" class="md-fab md-raised md-mini">
+						<md-button ng-if="selected" aria-label="edit" class="md-fab md-raised md-mini" ng-click="createUserDilaog($event)">
+							<md-icon md-font-set="material-icons" aria-label="edit">edit</md-icon>
+							<md-tooltip md-direction="left">Edit</md-tooltip>
+						</md-button>
+						<md-button ng-if="selected" aria-label="remove" class="md-fab md-raised md-mini" ng-click="deleteUserDilaog(selected.id)">
+							<md-icon md-font-set="material-icons" aria-label="remove">delete</md-icon>
+							<md-tooltip md-direction="left">Delete</md-tooltip>
+						</md-button>
+						<md-button ng-if="selected" aria-label="share" class="md-fab md-raised md-mini">
 							<md-icon md-font-set="material-icons" aria-label="share">share</md-icon>
 							<md-tooltip md-direction="left">Share</md-tooltip>
 						</md-button>
@@ -63,6 +107,7 @@
 
 		<!--Services-->
 		<script type="text/javascript" src="js/services/UserService.js"></script>
+		<script type="text/javascript" src="js/services/NotifyService.js"></script>
 
 	</body>
 </html>
