--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<md-icon md-font-set="material-icons" aria-label="add">add</md-icon>
 							<md-tooltip md-direction="left">Add</md-tooltip>
 						</md-button>
-						<md-button ng-if="selected" aria-label="edit" class="md-fab md-raised md-mini" ng-click="createUserDilaog($event)">
+						<md-button ng-if="selected" aria-label="edit" class="md-fab md-raised md-mini" ng-click="editUserDilaog(selected)">
 							<md-icon md-font-set="material-icons" aria-label="edit">edit</md-icon>
 							<md-tooltip md-direction="left">Edit</md-tooltip>
 						</md-button>
